--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: 'Vapor Cloud'
 pages:
 - Home: 'index.md'
+  'VCloud CLI': 'vcloud-cli.yml'
 - API Documentation:
     - 'Admin API': 'api/admin-api.md'
 - Configuring deployment:
