--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,3 +10,5 @@ pages:
     - 'General': 'configuring-deployment/general.md'
     - 'Vapor': 'configuring-deployment/vapor.md'
     - 'Blank': 'configuring-deployment/blank.md'
+theme: 'material'
+theme_dir: 'tmp'
