--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,5 +39,6 @@ pages:
 - Server setup:
     - General:
         - 'About our server setup': 'server-setup/general/about-our-server-setup.md'
+        - 'Sending E-mails (SMTP)': 'server-setup/general/sending-emails.md'
     - Loadbalancer:
         - 'SSL/TLS': 'server-setup/loadbalancer/ssl-tls.md'
