--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ pages:
 - APIs:
     - 'Introduction': 'api/introduction.md'
     - 'Admin API': 'api/admin-api.md'
+    - 'Application API': 'api/application-api.md'
 - Advanced:
     - General:
         - 'About our server setup': 'server-setup/general/about-our-server-setup.md'
