--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,8 @@ extra_css:
 
 pages:
 - Overview: 'index.md'
+- Architecture:
+    - 'Core principals': 'architecture/core-principals.md'
 - Toolbox:
     - 'Install': 'toolbox/install.md'
     - 'Usage': 'toolbox/usage.md'
