Adding section about private git

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,5 +49,6 @@ pages:
         - 'About our server setup': 'server-setup/general/about-our-server-setup.md'
         - 'How do cronjobs work': 'server-setup/general/how-do-cronjobs-work.md'
         - 'Sending E-mails (SMTP)': 'server-setup/general/sending-emails.md'
+        - 'Using private git repository': 'server-setup/general/using-private-git.md'
     - Loadbalancer:
         - 'SSL/TLS': 'server-setup/loadbalancer/ssl-tls.md'
