Adding support page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,3 +67,5 @@ pages:
     - 'Troubleshooting': 'troubleshooting/troubleshooting.md'
     - 'Redis': 'troubleshooting/redis.md'
     - 'MySQL': 'troubleshooting/mysql.md'
+- Support:
+    - 'Basic support': 'support/basic-support.md'
