Adding database configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,6 @@ pages:
         - 'Sending E-mails (SMTP)': 'advanced/general/sending-emails.md'
         - 'Using private git repository': 'advanced/general/using-private-git.md'
         - 'Running load tests': 'advanced/general/load-testing.md'
-        - 'Your own database server': 'advanced/general/your-own-database-server.md'
     - Loadbalancer:
         - 'SSL/TLS': 'advanced/loadbalancer/ssl-tls.md'
     - Security:
@@ -61,6 +60,10 @@ pages:
         - 'Vapor Cloud security': 'advanced/security/vapor-cloud-security.md'
     - Limitation:
         - 'Requests': "advanced/limitation/requests.md"
+- Database:
+  - 'MySQL': 'database/mysql.md'
+  - 'MongoDB': 'database/mongodb.md'
+  - 'Your own database server': 'database/your-own-database-server.md'
 - Domain:
     - 'Add custom domain': "custom-domain/add-domain.md"
     - 'Certificate manager': "custom-domain/certificate-manager.md"
