--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ markdown_extensions:
 theme: 'material'
 theme_dir: 'vapor-material'
 
-repo_url: https://github.com/vapor/vapor
+repo_url: https://github.com/vapor-cloud/documentation
 
 extra:
       logo: 'images/white-cloud-icon.svg'
