Adding disqus comments

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ extra:
       font:
         text: 'Roboto Slab'
         code: 'Source Code Pro'
+      disqus: 'staging-vapor-cloud-docs'
 
 extra_css:
   - 'stylesheets/extra.css'
